fix spacing issue

--- a/app/assets/stylesheets/_defaults.css.scss
+++ b/app/assets/stylesheets/_defaults.css.scss
@@ -82,7 +82,7 @@ input[type=submit] {
   margin-left: $space*2;
 
   @include small {
-    margin-top: $space;
+    margin-top: 0;
   }
 }
 
